--- a/openCV/PVC/Projeto3/.cproject
+++ b/openCV/PVC/Projeto3/.cproject
@@ -132,4 +132,5 @@
 			<resource resourceType="PROJECT" workspacePath="/PVC3"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
